--- a/.classpath
+++ b/.classpath
@@ -41,7 +41,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/herna/Downloads/itextpdf-5.5.13.2.jar">
+	<classpathentry kind="lib" path="src/itextpdf-5.5.13.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
